--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ken Sato hoc JS</title>
 </head>
-<script>
-  alert( "hello world from js")
+<script src="./bai2/bai2.js">
+  
 </script>
 <body>
   <h1>Hello world HTML</h1>
